# interview-exercises

./: CMakeLists.txt  LICENSE  README.md
include/: processor.h
src/: processor.cpp
tests/: CMakeLists.txt  test_processor.cpp
