# tests/CMakeLists.txt

# TODO: integrate GoogleTest here.
#       You might use FetchContent in the top-level CMakeLists
#       or call find_package(GTest) and then link GTest::gtest[_main].
#
# add_executable(test_processor test_processor.cpp)
# target_link_libraries(test_processor PRIVATE processor GTest::gtest_main)
# gtest_discover_tests(test_processor)